[project]
name = "health"
version = "0.1.0"
description = "Python package to handle health data"
authors = [
  { name="Michael Galloy", email="mgalloy@gmail.com" },
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.7"
homepage = "https://health.readthedocs.io/en/latest/"
repository = "https://github.com/mgalloy/health"
documentation = "https://health.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
keywords = ["date", "time", "configuration", "timeline"]
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
    "wheel",
    "watchdog",
    "Sphinx",
    "twine",
    "coverage",
    "flake8",
    "pytest-runner",
    "black",
    "sphinx_rtd_theme",
]

[project.scripts]
weight = "health:weight.cli"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
# increment the --cov-fail-under as we increase test coverage
addopts = "--cov-report html:coverage_html --cov-report term-missing --cov-fail-under 80"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
